src/components/ui/Card/styles.css
.glass-card {
  padding: 1.5rem;
  border-radius: var(--border-radius);
  background: var(--card-bg);
  box-shadow:
    0 4px 30px rgba(0, 0, 0, 0.1),
    inset 0 1px 0 rgba(250, 250, 250, 0.5),
    inset 0 -1px 0 rgba(250, 250, 250, 0.1),
    inset 0 0 26px 13px rgba(250, 250, 250, 0.13);
  backdrop-filter: blur(10px);
  transition: background var(--bgc-transition-speed)
    var(--bgc-transition-easing);
}

.glass-card.small {
  padding: 0.5rem;
}

.glass-card.large {
  padding: 2rem;
}

.glass-card.heading {
  padding-inline: 1.5rem;
  padding-block: 0.75rem;
  background: color-mix(in srgb, var(--card-bg) 70%, transparent);
  box-shadow:
    0 4px 30px rgba(0, 0, 0, 0.1),
    inset 0 2px 0 rgba(250, 250, 250, 0.8),
    inset 0 -2px 0 rgba(250, 250, 250, 0.3),
    inset 0 0 26px 13px rgba(250, 250, 250, 0.13);
}

.glass-card.interface {
  background: color-mix(in srgb, var(--sky-top) 60%, transparent);
}

.timeline::after {
  content: "";
  position: absolute;
  left: 50%;
  top: 100%;
  display: block;
  width: 2px;
  height: 8px;
  transform: translateX(-50%) translateY(50%);
  border-left: 3px solid color-mix(in srgb, var(--card-bg) 70%, transparent);
  border-style: dotted;
}

@media (prefers-color-scheme: dark) {
  .glass-card {
    box-shadow:
      0 4px 30px rgba(0, 0, 0, 0.1),
      inset 0 1px 0 rgba(250, 250, 250, 0.05),
      inset 0 -1px 0 rgba(250, 250, 250, 0.01),
      inset 0 0 26px 13px rgba(250, 250, 250, 0.03);
  }
}

@media (prefers-contrast: more) {
  .glass-card {
    box-shadow: none;
    border: 2px solid var(--contrast-border-color);
  }
  .glass-card.heading {
    box-shadow: none;
    background: color-mix(in srgb, var(--card-bg) 90%, transparent);
  }
  .glass-card.interface {
    box-shadow: none;
    background: color-mix(in srgb, var(--sky-top) 90%, transparent);
  }
}

@media (prefers-color-scheme: dark) and (prefers-contrast: more) {
  .glass-card {
    border-color: var(--contrast-border-color-dark);
  }
}

@media (prefers-reduced-transparency: reduce) {
  .glass-card.heading {
    background: color-mix(in srgb, var(--card-bg) 90%, transparent);
  }
  .glass-card.interface {
    background: color-mix(in srgb, var(--sky-top) 90%, transparent);
  }
}

